--- a/Regresión/Regresion_Lineal_Polynomial.ipynb
+++ b/Regresión/Regresion_Lineal_Polynomial.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -72,20 +72,24 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 122
         },
-        "outputId": "4176263d-728d-4b93-e6e1-cf97c4ac16de"
+        "outputId": "6c0b74f6-98c1-4c7b-9309-7b7902991bfc"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -113,7 +117,7 @@
         "x = data1.iloc [:,1:2].values\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -164,7 +168,7 @@
         "x_test = sc_x.fit.transform(x_test)\n",
         "\"\"\""
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +220,7 @@
         "poly_reg = PolynomialFeatures(degree = 2)\n",
         "x_poly = poly_reg.fit_transform(x)"
       ],
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -241,14 +245,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "adf77a26-d050-47f3-ee50-2d05827f335c"
+        "outputId": "35bbd3a4-318f-4cc3-8087-88d5cc0dafdc"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "lineal_poly = LinearRegression()\n",
         "lineal_poly.fit(x_poly,y)\n"
       ],
-      "execution_count": 16,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -260,7 +264,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 7
         }
       ]
     },
@@ -283,9 +287,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "8e0af64b-6d1d-4f97-96c7-8fba3be40bc9"
+        "outputId": "8efbcd04-87b4-4c6b-b82f-76e7a0bec456"
       },
       "source": [
+        "x_grid = np.arange(min(x), max(x), 0.1)\n",
+        "x_grid= x_grid.reshape(len(x_grid),1)\n",
         "plt.scatter (x,y, color=\"Red\")\n",
         "plt.plot (x,lineal_poly.predict(x_poly),color=\"blue\")\n",
         "plt.title (\"Modelo polinómico\")\n",
@@ -293,7 +299,7 @@
         "plt.ylabel(\"Sueldo\")\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
