--- a/Regresión/Regresion_Lineal_Polynomial.ipynb
+++ b/Regresión/Regresion_Lineal_Polynomial.ipynb
@@ -315,6 +315,47 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O7xRty61diED",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Predicción del modelo. para un empleado que entra a la empresa\n",
+        "### en un nivel entre el 6 y 7"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dSgE7O_8dzx0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8c19597f-bcfa-4f4c-b994-b555f5b49023"
+      },
+      "source": [
+        "lineal_poly.predict(poly_reg.fit_transform([[3.5]]) )"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5157.1969697])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     }
   ]
 }
