--- a/Regresión/Regresion_MaquinaSoporteVectorial.ipynb
+++ b/Regresión/Regresion_MaquinaSoporteVectorial.ipynb
@@ -30,8 +30,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# Regresión lineal Polinómica. \n",
-        "# objetivo: predecir el sueldo de un empleado de acuerdo a su nivel"
+        "# Regresión con soporte máquina vectorial (SVR)\n",
+        "# objetivo: "
       ]
     },
     {
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -72,24 +72,20 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 34
         },
-        "outputId": "6c0b74f6-98c1-4c7b-9309-7b7902991bfc"
+        "outputId": "c428721c-88fb-4cb4-fc28-8ac0f79de964"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -204,8 +200,8 @@
         "colab_type": "text"
       },
       "source": [
-        "### Ajustar las caracteristicas de la regresion lineal polinómica\n",
-        "# Ajustar el modelo con regresion lineal polinomica"
+        "### Ajustar las caracteristicas SVR\n",
+        "# Ajustar el modelo SVR"
       ]
     },
     {
@@ -216,9 +212,9 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.preprocessing import PolynomialFeatures\n",
-        "poly_reg = PolynomialFeatures(degree = 2)\n",
-        "x_poly = poly_reg.fit_transform(x)"
+        "from sklearn.svm import SVR\n",
+        "regression_svr = SVR(kerner='rbf')\n",
+        "x_SVR = regression_svr.fit_transform(x)"
       ],
       "execution_count": null,
       "outputs": []
