--- a/Regresión/Regresion_MaquinaSoporteVectorial.ipynb
+++ b/Regresión/Regresion_MaquinaSoporteVectorial.ipynb
@@ -113,7 +113,7 @@
         "x = data1.iloc [:,1:2].values\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "colab": {}
       },
       "source": [
-        "pd.DataFrame(x)"
+        "pd.DataFrame(y)"
       ],
       "execution_count": null,
       "outputs": []
@@ -209,15 +209,33 @@
       "metadata": {
         "id": "tDBqCWkfjVjY",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "4cde2db2-694c-4eec-f8a5-cfb9dca3c6ed"
       },
       "source": [
         "from sklearn.svm import SVR\n",
-        "regression_svr = SVR(kerner='rbf')\n",
-        "x_SVR = regression_svr.fit_transform(x)"
+        "regression = SVR(kernel='rbf')\n",
+        "regression.fit(x,y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='scale',\n",
+              "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -227,40 +245,70 @@
         "colab": {}
       },
       "source": [
-        "pd.DataFrame(x_poly)"
+        "y_pred = regression.predict([[6.5]])"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PhjqjxAnNDgP",
+        "id": "jfRA3XQQEpDn",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 80
         },
-        "outputId": "35bbd3a4-318f-4cc3-8087-88d5cc0dafdc"
+        "outputId": "4c34cb6b-82bb-4878-fdac-125e25875427"
       },
       "source": [
-        "from sklearn.linear_model import LinearRegression\n",
-        "lineal_poly = LinearRegression()\n",
-        "lineal_poly.fit(x_poly,y)\n"
+        "pd.DataFrame(y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>130001.828839</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+              "               0\n",
+              "0  130001.828839"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 19
         }
       ]
     },
