--- a/Regresión/Regresion_MaquinaSoporteVectorial.ipynb
+++ b/Regresión/Regresion_MaquinaSoporteVectorial.ipynb
@@ -233,9 +233,9 @@
         "colab": {}
       },
       "source": [
-        "y_pred = regression.predict([[6.5]])"
+        "y_pred = regression.predict(sc_x.transform([[6.5]]) )"
       ],
-      "execution_count": 37,
+      "execution_count": 43,
       "outputs": []
     },
     {
