--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -31,7 +31,7 @@
       },
       "source": [
         "# Regresión con soporte máquina vectorial (SVR)\n",
-        "# objetivo: "
+        "# objetivo: Predecir las bajas del mes"
       ]
     },
     {
