--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -31,7 +31,7 @@
       },
       "source": [
         "# Regresión con soporte máquina vectorial (SVR)\n",
-        "# objetivo: Predecir las bajas del mes"
+        "# objetivo: "
       ]
     },
     {
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -72,20 +72,24 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 122
         },
-        "outputId": "d8ae5beb-c8f1-486a-be46-327cfd3bdb03"
+        "outputId": "b60581c1-c9a4-4460-ac06-39431ca69742"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "4/3wFVCPzqO2oCVGe1aZ2Y-Zl-0SBSmPij3fIZ5GkZ7Kas6jhGL8FtlAA\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -109,7 +113,7 @@
         "colab": {}
       },
       "source": [
-        "data1 = pd.read_csv('/content/drive/My Drive/Dataset/Position_Salaries.csv',delimiter=',')\n",
+        "data1 = pd.read_csv('/content/drive/My Drive/Dataset/DBajas_TEC.csv',delimiter=',')\n",
         "x = data1.iloc [:,1:2].values\n",
         "y = data1.iloc [:,2].values"
       ],
