--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -113,11 +113,11 @@
         "colab": {}
       },
       "source": [
-        "data1 = pd.read_csv('/content/drive/My Drive/Dataset/DBajas_TEC.csv',delimiter=',')\n",
-        "x = data1.iloc [:,1:2].values\n",
-        "y = data1.iloc [:,2].values"
+        "data1 = pd.read_csv('/content/drive/My Drive/Dataset/DBajas_TEC.txt',delimiter='~')\n",
+        "x = data1.iloc [:,:-1].values\n",
+        "y = data1.iloc [:,3].values"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -129,6 +129,19 @@
       },
       "source": [
         "pd.DataFrame(x)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dV_NCiMVxzXR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.DataFrame(y)"
       ],
       "execution_count": null,
       "outputs": []
