--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 1,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -72,24 +72,20 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 34
         },
-        "outputId": "b60581c1-c9a4-4460-ac06-39431ca69742"
+        "outputId": "0297a32e-f770-4067-ecc3-0940b465a681"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "4/3wFVCPzqO2oCVGe1aZ2Y-Zl-0SBSmPij3fIZ5GkZ7Kas6jhGL8FtlAA\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -117,7 +113,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,3].values"
       ],
-      "execution_count": 19,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -149,13 +145,48 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "wNusxNzT3UMP",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Dividimos los datos en entrenamiento y test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Oc4kco8u3ah-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.3, random_state=0)"
+      ],
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fCFx5MtC4F8s",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.DataFrame(x_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "TMvIs9DIgZV_",
         "colab_type": "text"
       },
       "source": [
-        "### Dividir el data set en conjunto de entrenamiento y conjunto de testing\n",
-        "# no dividimos el dataset ya que tenemos solo 10 datos. son muy poquitos.\n",
-        "# Escalamos los datos"
+        "### Escalamos los datos"
       ]
     },
     {
