--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 25,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "0297a32e-f770-4067-ecc3-0940b465a681"
+        "outputId": "7956b8ad-5a1e-4a2a-860f-72805cef3437"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 26,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +113,36 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,3].values"
       ],
-      "execution_count": 27,
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LGqSJaVW53oC",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Codificar datos categóricos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1xHeUpIU59aN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "labelencoder  = LabelEncoder()\n",
+        "x[:,0] = labelencoder.fit_transform(x[:,0])\n",
+        "x[:,1] = labelencoder.fit_transform(x[:,1])\n",
+        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0])],remainder='passthrough')\n",
+        "ct1 = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[1])],remainder='passthrough')"
+      ],
+      "execution_count": 56,
       "outputs": []
     },
     {
