--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -146,6 +146,29 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "elfJqy4EBVo8",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Evitar la trampa de variables Dummy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gxuG7JnEBdBU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = x[:,1:]"
+      ],
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9HByNNfG68OE",
@@ -192,7 +215,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.3, random_state=0)"
       ],
-      "execution_count": 31,
+      "execution_count": 58,
       "outputs": []
     },
     {
