--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 36,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "7956b8ad-5a1e-4a2a-860f-72805cef3437"
+        "outputId": "eaf32440-6cf6-4b0a-cbca-df8004b4f993"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 37,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +113,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,3].values"
       ],
-      "execution_count": 55,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -139,10 +139,10 @@
         "labelencoder  = LabelEncoder()\n",
         "x[:,0] = labelencoder.fit_transform(x[:,0])\n",
         "x[:,1] = labelencoder.fit_transform(x[:,1])\n",
-        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0])],remainder='passthrough')\n",
-        "ct1 = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[1])],remainder='passthrough')"
+        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
+        "x= np.array(ct.fit_transform(x),dtype=np.integer)"
       ],
-      "execution_count": 56,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
       "source": [
         "x = x[:,1:]"
       ],
-      "execution_count": 60,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -215,7 +215,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.3, random_state=0)"
       ],
-      "execution_count": 58,
+      "execution_count": 75,
       "outputs": []
     },
     {
