--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -234,6 +234,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "sVYTFc0CGM7H",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Dejamos las variables independientes de mayor significación (Eliminacion hacia atras)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "TMvIs9DIgZV_",
         "colab_type": "text"
       },
