--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -205,6 +205,56 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kWOe-FutUTcL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import statsmodels.formula.api as smf\n",
+        "def MEliminaAtras (x2,SL):\n",
+        "  numCol = len(x[0])\n",
+        "  for i in range(0,numCol):\n",
+        "    \n",
+        "SL=0.05\n",
+        "x_opt = x[:,[0,1,2,3,4,5,6]]\n",
+        "x_modelo = MEliminaAtras(x_opt, SL)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2c9ewqvLZwEj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c518b7fb-15d8-4648-f69b-0a7afc7142a5"
+      },
+      "source": [
+        "len(x[0])"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "wNusxNzT3UMP",
