--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -297,41 +297,15 @@
       "metadata": {
         "id": "tDBqCWkfjVjY",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 105
-        },
-        "outputId": "ca5d705b-b7b9-4fa0-f896-7d7b83fb59c5"
+        "colab": {}
       },
       "source": [
         "from sklearn.svm import SVR\n",
         "regression = SVR(kernel='rbf')\n",
         "regression.fit(x,y)"
       ],
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='scale',\n",
-              "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 26
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -341,20 +315,8 @@
         "colab": {}
       },
       "source": [
-        "y_pred = sc_y.inverse_transform(regression.predict(sc_x.transform([[6.5]]) ))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jfRA3XQQEpDn",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "pd.DataFrame(y_pred)"
+        "'''y_pred = sc_y.inverse_transform(regression.predict(sc_x.transform([[6.5]]) ))\n",
+        "pd.DataFrame(y_pred)'''"
       ],
       "execution_count": null,
       "outputs": []
