--- a/Regresión/Regresion_LinealMultiple.ipynb
+++ b/Regresión/Regresion_LinealMultiple.ipynb
@@ -476,7 +476,7 @@
         "x_opt = x[:,[0,1,2,3,4,5]]        \n",
         "x_modelo = elimnaAtras(x_opt, SL)"
       ],
-      "execution_count": 35,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -484,409 +484,13 @@
       "metadata": {
         "id": "x2puOXgFoahZ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "10334c04-259b-4e82-b727-0e67a08bcec5"
+        "colab": {}
       },
       "source": [
         "pd.DataFrame(x_modelo)"
       ],
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>165349</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>162597</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>153441</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>144372</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>142107</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>131876</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>134615</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>130298</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>120542</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>123334</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>101913</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>100671</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>12</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>93863</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>91992</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>119943</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>15</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>114523</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>16</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>78013</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>17</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>94657</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>18</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>91749</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>19</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>86419</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>20</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>76253</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>21</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>78389</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>22</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>73994</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>23</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>67532</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>24</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>77044</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>25</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>64664</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>26</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>75328</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>27</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>72107</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>28</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>66051</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>29</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>65605</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>30</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>61994</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>31</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>61136</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>32</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>63408</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>33</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>55493</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>34</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>46426</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>35</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>46014</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>36</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>28663</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>37</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>44069</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>38</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>20229</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>39</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>38558</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>40</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>28754</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>41</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>27892</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>42</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>23640</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>43</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>15505</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>44</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>22177</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>45</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>46</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1315</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>47</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>48</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>542</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>49</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "    0  1       2\n",
-              "0   1  1  165349\n",
-              "1   1  1  162597\n",
-              "2   1  1  153441\n",
-              "3   1  1  144372\n",
-              "4   1  1  142107\n",
-              "5   1  1  131876\n",
-              "6   1  1  134615\n",
-              "7   1  1  130298\n",
-              "8   1  1  120542\n",
-              "9   1  1  123334\n",
-              "10  1  1  101913\n",
-              "11  1  1  100671\n",
-              "12  1  1   93863\n",
-              "13  1  1   91992\n",
-              "14  1  1  119943\n",
-              "15  1  1  114523\n",
-              "16  1  1   78013\n",
-              "17  1  1   94657\n",
-              "18  1  1   91749\n",
-              "19  1  1   86419\n",
-              "20  1  1   76253\n",
-              "21  1  1   78389\n",
-              "22  1  1   73994\n",
-              "23  1  1   67532\n",
-              "24  1  1   77044\n",
-              "25  1  1   64664\n",
-              "26  1  1   75328\n",
-              "27  1  1   72107\n",
-              "28  1  1   66051\n",
-              "29  1  1   65605\n",
-              "30  1  1   61994\n",
-              "31  1  1   61136\n",
-              "32  1  1   63408\n",
-              "33  1  1   55493\n",
-              "34  1  1   46426\n",
-              "35  1  1   46014\n",
-              "36  1  1   28663\n",
-              "37  1  1   44069\n",
-              "38  1  1   20229\n",
-              "39  1  1   38558\n",
-              "40  1  1   28754\n",
-              "41  1  1   27892\n",
-              "42  1  1   23640\n",
-              "43  1  1   15505\n",
-              "44  1  1   22177\n",
-              "45  1  1    1000\n",
-              "46  1  1    1315\n",
-              "47  1  1       0\n",
-              "48  1  1     542\n",
-              "49  1  1       0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 36
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
