--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 8,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "056cebf7-ee17-43ae-b986-d3050b8fb413"
+        "outputId": "8bbf2635-3439-4969-b28e-c06e3b192e29"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 9,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,16 +89,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "LDlK13slxMnk",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Nueva sección"
       ]
     },
     {
@@ -113,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,3].values"
       ],
-      "execution_count": 10,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -142,7 +132,7 @@
         "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
         "x= np.array(ct.fit_transform(x),dtype=np.integer)"
       ],
-      "execution_count": 11,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -165,7 +155,7 @@
       "source": [
         "x = x[:,1:]"
       ],
-      "execution_count": 12,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -215,7 +205,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.3, random_state=0)"
       ],
-      "execution_count": 22,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -255,7 +245,7 @@
         "x= sc_x.fit_transform(x)\n",
         "y= sc_y.fit_transform(y.reshape(-1,1))"
       ],
-      "execution_count": 24,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -274,22 +264,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ica7hyF52HbD",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Fow-3bkhjOVu",
         "colab_type": "text"
       },
       "source": [
-        "### Ajustar las caracteristicas SVR\n",
-        "# Ajustar el modelo SVR"
+        "### Ajustar las caracteristicas SVR"
       ]
     },
     {
@@ -297,15 +276,41 @@
       "metadata": {
         "id": "tDBqCWkfjVjY",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "4139c03c-7bd3-4496-fd6d-54cd9e2e31dd"
       },
       "source": [
         "from sklearn.svm import SVR\n",
         "regression = SVR(kernel='rbf')\n",
         "regression.fit(x,y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='scale',\n",
+              "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -339,14 +344,30 @@
         "colab": {}
       },
       "source": [
-        "import statsmodels.formula.api as smf\n",
+        "import statsmodels.api as smf\n",
         "def MEliminaAtras (x2,SL):\n",
         "  numCol = len(x[0])\n",
         "  for i in range(0,numCol):\n",
-        "    \n",
+        "    regresor_OLS = smf.OLS(endog=y, exog=x2).fit()\n",
+        "    maxVar = max(regresor_OLS.pvalues).astype(float)\n",
+        "    if maxVar > SL:\n",
+        "        \n",
         "SL=0.05\n",
         "x_opt = x[:,[0,1,2,3,4,5,6]]\n",
         "x_modelo = MEliminaAtras(x_opt, SL)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8Pu5ZP8jk7fy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.DataFrame(x.modelo)"
       ],
       "execution_count": null,
       "outputs": []
