--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 33,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "8bbf2635-3439-4969-b28e-c06e3b192e29"
+        "outputId": "3d87df61-2c22-4025-9fda-718a62aa239e"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 34,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,3].values"
       ],
-      "execution_count": 35,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
         "x= np.array(ct.fit_transform(x),dtype=np.integer)"
       ],
-      "execution_count": 36,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
       "source": [
         "x = x[:,1:]"
       ],
-      "execution_count": 37,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.3, random_state=0)"
       ],
-      "execution_count": 41,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "x= sc_x.fit_transform(x)\n",
         "y= sc_y.fit_transform(y.reshape(-1,1))"
       ],
-      "execution_count": 43,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -278,25 +278,18 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 51
         },
-        "outputId": "4139c03c-7bd3-4496-fd6d-54cd9e2e31dd"
+        "outputId": "837a5d6d-5286-4a95-ac5b-84e71bf7605d"
       },
       "source": [
+        "''' C: Evitar el overfity '''\n",
         "from sklearn.svm import SVR\n",
-        "regression = SVR(kernel='rbf')\n",
-        "regression.fit(x,y)"
+        "regression = SVR(C=1.0,kernel='rbf')\n",
+        "regression.fit(x,y.ravel())"
       ],
-      "execution_count": 44,
+      "execution_count": 62,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -308,7 +301,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 62
         }
       ]
     },
